# obs-studio

UI/: CMakeLists.txt  auth-caffeine.cpp  auth-caffeine.hpp  obs.rc  ui-config.h.in  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-main.hpp
UI/data/locale/: en-US.ini
UI/forms/: OBSBasic.ui  obs.qrc
cmake/Modules/: CopyMSVCBins.cmake  FindCaffeine.cmake  FindLibcaffeine.cmake
plugins/caffeine/: CMakeLists.txt  LibCaffeineConfig.cmake.in  caffeine-output.c
plugins/rtmp-services/data/: services.json
